Se arreglo el form del template cuenta

--- a/templates/cuenta.html
+++ b/templates/cuenta.html
@@ -54,7 +54,7 @@
                         	</div>
                     	</div>
                 	   	<hr class="bg-primary">
-						   <form action="#"> <!--Cambiar el action para eliminar la cuenta-->
+						   <form action="cuenta" method="DELETE"> <!--Cambiar el action para eliminar la cuenta-->
 							<input class="btn btn-danger btn-lg " type="submit" value="Eliminar cuenta">
 						   </form>
 						   <div class="col-sm-6">
