Extracción del value de la categoria

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         </header>
         <div class="contenido-hero contenedor">
             <h1>Encuentra las mejores experiencias en linea</h1>
-            <form action="#"> 
+            <form action="#" method="POST"> 
                 <!--Cambiar el nombre de las categorias-->
                 <select type="text" name="busqueda" class="busqueda" placeholder="Buscar etiqueta de la actividad">
                     <option selected="">Escoger una categoria...</option>
