Ciclo para obtener informacion de mis eventos y eventos futuros

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                     <div class="info">
                         <p class="categoria">{{row[4]}}</p><!--ROW[4]-->
                         <p class="titulo">{{row[1]}}</p>
-                        <p class="precio">{{row[2]}}</p>
+                        <p class="precio">Q{{row[2]}}</p>
                         <a href="informacion_actividad/{{row[0]}}">Mas informacion...</a>
                         <!-- HAY QUE HACER UN FORM QUE ENVIE LA INFO DEL EVENTO que se manda el id del evento-->
                     </div>
