--- a/templates/editar_actividad.html
+++ b/templates/editar_actividad.html
@@ -30,8 +30,9 @@
             <div class="col-md-10 mt-5 mb-5 pt-5">
              	<div class="row z-depth-3">
 					<!--Cuadro Blanco-->
+					{% for row in informacion %}
             		<div class="col-sm-12 bg-white rounded-right">
-                    	<h3 class="mt-3 text-center">Nombre de la actividad</h3>
+                    	<h3 class="mt-3 text-center">{{row[1]}}</h3>
                     	<hr class="bg-primary mt-0 w-50">
 
                    		<div class="row">
@@ -39,24 +40,25 @@
 								
 							   <div class="row">
 								   <div class="col-sm-6 card-block text-center text-white">
-									   <img src="{{img1}}">
+									   <img src="{{row[6]}}">
 								   </div>
 								   <div class=" col-sm-6 card-block text-center text-white">
-									   <img src="{{img2}}">
+									   <img src="">
 								   </div>
 							   </div>
 							  
 							   <div class="row mt-2">
 								   <div class="col-sm-6 card-block text-center text-white">
-									   <img src="{{img3}}">
+									   <img src="">
 								   </div>
 								   <div class=" col-sm-6 card-block text-center text-white">
-									   <img src="{{img4}}">
+									   <img src="">
 								   </div>
 							   </div>
 
                                <div class="row">
-                                <form class="form-group col-sm-12 text-center" action="#">
+                                <form class="form-group col-sm-12 text-center" action="#" post="DELETE">
+									<input type="hidden" value="{{row[0]}}" name="idevento"></input>
                                     <input type="submit" class="btn btn-danger w-100" value="Eliminar actividad"></input>
                                 </form>
                             </div>
@@ -69,24 +71,22 @@
 						   
                         	<div class="col-sm-8">
                             	<p class="font-weight-bold">Descripcion de la actividad:</p>
-                           		<h6 class=" text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ullam voluptatibus ipsa aliquam nostrum quod velit veniam tenetur! Suscipit laboriosam consequuntur accusamus provident odio eligendi harum voluptates omnis deleniti?
-								   Quos quo a odit. Eius sit dignissimos repellat enim voluptate nesciunt officiis animi nihil consequuntur! Fugiat a dolorem veniam recusandae est id. Suscipit odio assumenda, nemo repudiandae labore iste temporibus?
-								   Iure similique nulla sapiente voluptatibus vitae eligendi eveniet. Earum quaerat, deserunt ratione molestias libero placeat doloribus! Ea sunt vel sint vero? Ducimus quod excepturi soluta earum, vitae harum cumque possimus.
-								   Minus incidunt harum consequatur, dolore illum id ut asperiores suscipit consectetur animi perferendis atque assumenda porro dolores dolorem deleniti? Neque, harum. Cum suscipit deserunt repellat nemo labore amet voluptas optio!</h6>
+                           		<h6 class=" text-muted">{{row[2]}}</h6>
                         	</div>
                         	<div class="col-sm-4 text-center">
-                            	<p class="font-weight-bold">Categoria:</p>
-                           		<h6 class="text-muted">Javier</h6>
+                            	<p class="font-weight-bold">Fecha:</p>
+                           		<h6 class="text-muted">{{row[3]}}</h6>
                         	</div>
                         	<div class="col-sm-4 text-center">
-                           		<p class="font-weight-bold">Fecha</p>
-                          	  	<h6 class="text-muted">19/10/2021</h6>
+                           		<p class="font-weight-bold">Hora</p>
+                          	  	<h6 class="text-muted">{{row[4]}}</h6>
                         	</div>
 							<div class="col-sm-4 text-center">
 								<p class="font-weight-bold">Precio</p>
-								 <h6 class="text-muted">Q150</h6>
+								 <h6 class="text-muted">Q{{row[5]}}</h6>
 						     </div>
                     	</div>
+						{% endfor %}
 
                 	   	<hr class="bg-primary">
 
@@ -94,39 +94,17 @@
 						<h3 class="mt-3 text-center">Comentarios</h3>
                     	<hr class="bg-primary mt-0 w-50">
 						<div class="row">
+
+							{% for row in comentarios %}
                         	<div class="col-sm-10">
-                            	<p class="font-weight-bold">Comentario de: Ejemplo1</p>
-                           		<h6 class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde ab magnam quia provident pariatur expedita fuga modi ratione maiores iusto aut, eos magni perferendis tempora eius rerum ipsa nobis totam!</h6>
+                            	<p class="font-weight-bold">Comentario de: {{row[1]}}</p>
+                           		<h6 class="text-muted">{{row[2]}}</h6>
                         	</div>
                             <form class="form-group text-center col-sm-2" action="#">
+								<input type="hidden" name="idcomentario" value="{{row[0]}}"></input>
 								<input type="submit" class="btn btn-danger " value="Eliminar"></input>
 							</form>	
-
-
-                        	<div class="col-sm-10">
-                            	<p class="font-weight-bold">Comentario de: Ejemplo2</p>
-                           		<h6 class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde ab magnam quia provident pariatur expedita fuga modi ratione maiores iusto aut, eos magni perferendis tempora eius rerum ipsa nobis totam!</h6>
-                        	</div>
-                            <form class="form-group text-center col-sm-2" action="#">
-								<input type="submit" class="btn btn-danger " value="Eliminar"></input>
-							</form>	
-
-							<div class="col-sm-10">
-                            	<p class="font-weight-bold">Comentario de: Ejemplo3</p>
-                           		<h6 class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde ab magnam quia provident pariatur expedita fuga modi ratione maiores iusto aut, eos magni perferendis tempora eius rerum ipsa nobis totam!</h6>
-                        	</div>
-                            <form class="form-group text-center col-sm-2" action="#">
-								<input type="submit" class="btn btn-danger " value="Eliminar"></input>
-							</form>	
-
-							<div class="col-sm-10">
-                            	<p class="font-weight-bold">Comentario de: Ejemplo4</p>
-                           		<h6 class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde ab magnam quia provident pariatur expedita fuga modi ratione maiores iusto aut, eos magni perferendis tempora eius rerum ipsa nobis totam!</h6>
-                        	</div>
-                            <form class="form-group text-center col-sm-2" action="#">
-								<input type="submit" class="btn btn-danger " value="Eliminar"></input>
-							</form>	
-
+							{% endfor %}
                     	</div>
               		</div>
              	</div>
