--- a/templates/mis_actividades.html
+++ b/templates/mis_actividades.html
@@ -65,7 +65,7 @@
                         <p class="categoria">Hora de la actividad: {{row[5]}}</p>
                         <form action="#" method="DELETE">
                             <input type="hidden" name="id" value="{{row[0]}}">
-                            <input type="submit" class="btn-eliminar">
+                            <input type="submit" name="eliminar" class="btn-eliminar">
                         </form>
                     </div>
                 </div>
