--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,9 @@
             <h2>Experiencias</h2>
             <div class="contenedor-cards">
                 <!-- for del diccionario que tenga toda la info de cada evento.-->
-                {% for row in records %}
+                {% for row,rowImages in zip(records,imagenes) %}
                 <div class="card">
-                    <img src="/images/{{row[3]}}">
+                    <img src="{{rowImages}}">
                     <div class="info">
                         <p class="categoria">{{row[4]}}</p><!--ROW[4]-->
                         <p class="titulo">{{row[1]}}</p>
