se arreglo lo de las fotos y rutas de movimiento entre páginas

--- a/templates/informacion_actividad.html
+++ b/templates/informacion_actividad.html
@@ -18,10 +18,10 @@
 
         <img src="{{logo}}" class="logo">
         <ul>
-            <li><a href="/">Inicio</a></li>
-            <li><a href="mis_actividades">Mis actividades</a></li>
-            <li><a href="nueva_actividad">Nueva actividad</a></li>
-            <li><a href="cuenta">Cuenta</a></li>
+            <li><a href="..//">Inicio</a></li>
+            <li><a href="../mis_actividades">Mis actividades</a></li>
+            <li><a href="../nueva_actividad">Nueva actividad</a></li>
+            <li><a href="../cuenta">Cuenta</a></li>
         </ul>
     </nav>
 	
@@ -40,7 +40,7 @@
 							<div class="col-sm-4  rounded-left contenedor-img">
 							   <div class="row">
 								   <div class="col-sm-6 card-block text-center text-white">
-									   <img src="{{row[6]}}">
+									   <img src="/static/{{row[6]}}">
 								   </div>
 								   <div class=" col-sm-6 card-block text-center text-white">
 									   <img src="">
