--- a/templates/editar_actividad.html
+++ b/templates/editar_actividad.html
@@ -18,10 +18,10 @@
 
         <img src="{{logo}}" class="logo">
         <ul>
-            <li><a href="/">Inicio</a></li>
-            <li><a href="mis_actividades">Mis actividades</a></li>
-            <li><a href="nueva_actividad">Nueva actividad</a></li>
-            <li><a href="cuenta">Cuenta</a></li>
+            <li><a href="..//">Inicio</a></li>
+            <li><a href="../mis_actividades">Mis actividades</a></li>
+            <li><a href="../nueva_actividad">Nueva actividad</a></li>
+            <li><a href="../cuenta">Cuenta</a></li>
         </ul>
     </nav>
 	
