revision casi completa

--- a/templates/informacion_actividad.html
+++ b/templates/informacion_actividad.html
@@ -105,7 +105,7 @@
 						<div class="row">
 							<form class="form-group text-center col-sm-12 d-flex" action="#" method="POST"> <!--se manda el comentario-->
 								<input type="text" class="form-control w-90 h-100" id="exampleFormControlInput1" name="comentario" placeholder="Escribir un comentario...">
-								<input type="submit" class="btn btn-danger w-10  h-100 mt-0" name="Comentar" value="Enviar"></input>
+								<input type="submit" class="btn btn-danger w-10  h-100 mt-0" name="Comentar" value="Comentar"></input>
 							</form>	
 						</div>
 
