Se cambiarion los forms de delete a post

--- a/templates/cuenta.html
+++ b/templates/cuenta.html
@@ -54,8 +54,8 @@
                         	</div>
                     	</div>
                 	   	<hr class="bg-primary">
-						   <form action="cuenta" method="DELETE"> <!--Cambiar el action para eliminar la cuenta-->
-							<input class="btn btn-danger btn-lg " type="submit" value="Eliminar cuenta">
+						   <form action="cuenta" method="POST"> <!--Cambiar el action para eliminar la cuenta-->
+							<input class="btn btn-danger btn-lg " type="submit" value="Eliminar" name="Eliminar">
 						   </form>
 						   <div class="col-sm-6">
 							<p></p>
