--- a/templates/editar_actividad.html
+++ b/templates/editar_actividad.html
@@ -40,7 +40,7 @@
 								
 							   <div class="row">
 								   <div class="col-sm-6 card-block text-center text-white">
-									   <img src="{{row[6]}}">
+									   <img src="static/{{row[6]}}">
 								   </div>
 								   <div class=" col-sm-6 card-block text-center text-white">
 									   <img src="">
@@ -100,9 +100,9 @@
                             	<p class="font-weight-bold">Comentario de: {{row[1]}}</p>
                            		<h6 class="text-muted">{{row[2]}}</h6>
                         	</div>
-                            <form class="form-group text-center col-sm-2" action="#">
+                            <form class="form-group text-center col-sm-2" action="#" method="POST">
 								<input type="hidden" name="idcomentario" value="{{row[0]}}"></input>
-								<input type="submit" class="btn btn-danger" name="eliminarComentario" value="Eliminar"></input>
+								<input type="submit" class="btn btn-danger" name="Eliminar" value="Eliminar"></input>
 							</form>	
 							{% endfor %}
                     	</div>
