--- a/templates/mis_actividades.html
+++ b/templates/mis_actividades.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+    {% if mensaje != "" %}
+        <script>
+            alert("{{mensaje}}");
+        </script>
+    {% endif %}
     <nav>
         <input type="checkbox" id= "check">
         <label for="check" class="checkbtn">
