--- a/templates/registro.html
+++ b/templates/registro.html
@@ -12,6 +12,11 @@
     
 </head>
 <body>
+    {% if mensaje != "" %}
+        <script>
+            alert("{{mensaje}}");
+        </script>
+    {% endif %}
     <header id="header">
         <div class="contenedorLogo">
             <img class="logo" src="{{logo}}" alt="logo">
@@ -27,7 +32,7 @@
                     <div class="profile-pic-div">
                         <img id="photo">
                         <label for="file" id="uploadbtn">Foto de perfil</label>
-                        <input type=file name=file id="file">
+                        <input type=file name=file id="file" required>
                     </div>
                     <!-- Fin foto de perfil -->
                         <input type="text" placeholder="Pais" name="Pais" id="Pais" required>
